# BLaDE

./: .gitignore  Compile.sh  CompileDebug.sh  CompileIntel.sh  CompileOptions.sh  CompilePGI.sh  CompileTorch.sh  license  modules  npt  readme
bench/: ConvTime.py  bench.sh  run.sh
doc/: DRUDE.txt  DevNotes.txt  MAIN.txt  citations  name
run/: Debug.sh  Profile.sh  Profile2.sh  README  ReadXTC.py  Run.sh  Sub.sh  input  input2  input_T4L  input_debug  output
src/: CMakeLists.txt
src/bonded/: bonded.cu  bonded.h  pair.cu  pair.h
src/domdec/: assign_blocks.cu  assign_domain.cu  assign_excl.cu  cull.cu  domdec.cu  domdec.h  recull.cu
src/drude/: drude_autobuild.cu  drude_force.cu  drude_hardwall.cu  drude_nbthole.cu  drude_plugin.cu  drude_plugin.h  drude_thermostat.cu  drude_types.h
src/enhanced/: enhanced.cu  enhanced.h
src/enhanced/meta_abf/: meta_abf.cu  meta_abf.h
src/holonomic/: holonomic.cu  holonomic.h  rectify.cu  rectify.h  virtual.cu  virtual.h
src/io/: calculate.cxx  calculate.h  control.cxx  control.h  io.cxx  io.h  variables.cxx  variables.h
src/main/: blade.cxx  blade_log.cxx  blade_log.h  defines.h  gpu_check.h  lady.cxx  msld.cxx  real3.h  reduction.h  scan.h
src/mlp/: mlp.h  tani.cu
src/msld/: msld.cu  msld.cxx  msld.h
src/nbdirect/: nbdirect.cu  nbdirect.h  nbdirectfaster.txt  nbdirectslower.txt
src/nbrecip/: nbrecip.cu  nbrecip.h
src/restrain/: restrain.cu  restrain.h
src/rng/: rng_cpu.cxx  rng_cpu.h  rng_gpu.cu  rng_gpu.h
src/run/: run.cu  run.cxx  run.h
src/system/: coordinates.cxx  coordinates.h  parameters.cxx  parameters.h  potential.cxx  potential.h  selections.cxx  selections.h  state.cxx  state.h  structure.cxx  structure.h  system.cxx  system.h
src/update/: LBFGS.h  endpoint.cu  endpoint.h  lbfgs.cu  lbfgs.h  minimize.cu  pressure.cu  pressure.h  rex.cxx  rex.h  update.cu  update.cxx  update.h
src/xdr/: README  xdrfile.cu  xdrfile_xtc.cxx
src_example/: CMakeLists.txt  Compile.sh  adapt.cu  adapt.h  atoms.cu  atoms.h  checkpt.cu  checkpt.h  cuda_util.h  defines.h  error.cu  error.h  files.cu  files.h  force.cu  force.h  leapparms.cu  leapparms.h  md.cu  md.h  mersenne.cu  mersenne.h  nblist.cu  nblist.h  nbsort.cu  nbsort.h  parms.cu  parms.h  smoggpu.cu  sort.cu  sort.h  specific.cu  specific.h  state.cu  state.h  times.cu  times.h  topol.cu  topol.h  unspecific.cu  (+6 more)
src_example/xdr/: xdrfile.h
test/: README  input_prot  input_water  testforce_fragment
test/14benz/: Notes.txt
test/DRD3_boresch/: dynamics_iteration.inp  main.inp  mini.inp  start.sub
test/DRD3_boresch/prep/: DRD3_charmm.inp  blocksetup.inp  drd3.inp  mol1.prm  mol2.prm  nbond.str
test/HSP90/: msld_prod.inp  variables112.inp
test/HSP90/prep/: cb7.inp
test/RNaseH/: arguments.inp  msld_prod.inp  variables37.inp
test/RNaseH/prep/: ec2acc.inp
test/RNaseH_peptide/blade/: arguments.inp  charmm.sh  msld_flat.inp  runset2.sh  test_ffix.inp  variablesflat.inp
test/RNaseH_peptide/both/: arguments_blade.inp  charmm.sh  clean.sh  msld_flat.inp  msld_flat_blade.inp  nbond.str  variables1.inp  variablesflat_blade.inp
test/RNaseH_peptide/charmm/: charmm.sh  msld_flat.inp  runset2.sh  variables1.inp
test/T4L/: runset4.sh  subset4.sh  variables112.inp
test/T4L/prep/: T4L149F.inp
test/T4L_peptide/: input
test/T4L_peptide/T4L_prep/: T4L99U.inp
test/T4L_prep/aa_stream/: ca_ala.str  ca_asn.str  ca_cys.str  ca_glu.str  ca_hsp.str  ca_leu.str  ca_phe.str  sele_asn.str  sele_gln.str  sele_glu.str  sele_trp.str  sele_tyr.str  sele_val.str
test/T4L_run/: debug.sh  msld_flat_debug.inp  name
test/T4L_run/prep/: Notes.txt
test/T4L_run/run1/: error  output  variables1.inp
test/T4L_run/template/: Notes.txt  msld_flat.inp  runset2.sh
test/dhfr/: bench.crd  blade_bench.psf  blade_par_all27_prot_lipid.prm  input
test/dhfr_folate_nadph/: input
test/dhfr_folate_nadph/hetb/: lig.crd
test/dhfr_folate_nadph/hetd/: lig.prm  lig.rtf
test/dmpg/: dmpg290k_new.inp
test/dmpg/toppar/: ions-noskov+roux-X=Onbfix.prm  par_all36_lipid.prm
test/drude/: README.md  input_cp1_baseline_water216  input_cp1_fd_spring  input_cp3_fd_nbthole14  input_cp3_nbthole_autobuild_all4_on  input_cp5_msld_drude_smoke  input_cp7_fd_anisotropic_spring  input_cp7_fd_screened_signal  input_cp7_hardwall_boundary_short  input_cp7_hardwall_center_short  input_cp7_hardwall_too_far_expected_fail  run_core_drude_suite.sh
test/drude/data/: drude_2atom.crd  drude_2atom.psf  drude_2atom_boundary_short.crd  drude_2atom_center_short.crd  drude_2atom_stretched.crd  drude_4atom_bonded.psf  drude_4atom_cp3.crd  drude_4atom_nbthole_openmm.psf  drude_5atom_aniso.crd  drude_5atom_aniso.psf  drude_6atom_nbthole14_openmm.crd  drude_6atom_nbthole14_openmm.psf  par_cp3_patch.prm
test/ec2acc/: input  input_test  variables37
test/ec2acc/aa_stream_lady/: sele_a3.str  sele_c5.str  sele_g3.str  sele_h.str  sele_h3.str  sele_h4.str  sele_j.str  sele_j4.str  sele_j5.str  sele_k.str  sele_m.str  sele_m5.str  sele_p3.str  sele_q.str  sele_q2.str  sele_q3.str  sele_r4.str  sele_t3.str  sele_t4.str  sele_v.str  sele_v4.str  sele_v5.str  sele_w4.str  sele_y5.str
test/ec2acc_prep/: Notes.txt  ec2acc.inp
test/ec2acc_prep/aa_stream/: noe_a.str  noe_c.str  noe_d.str  noe_i.str  noe_j.str  noe_q.str  noe_t.str  noe_w.str  sele_a2.str  sele_a4.str  sele_b3.str  sele_c2.str  sele_cons_0.str  sele_cons_g.str  sele_cons_i.str  sele_cons_j.str  sele_cons_l.str  sele_cons_m.str  sele_cons_r.str  sele_cons_s.str  sele_cons_t.str  sele_cons_v.str  sele_cons_y.str  sele_e.str  sele_e2.str  sele_e3.str  sele_e5.str  sele_f2.str  sele_f3.str  sele_i.str  sele_j.str  sele_k.str  sele_k5.str  sele_l3.str  sele_l5.str  sele_m.str  sele_m3.str  sele_m5.str  sele_p2.str  sele_q.str  (+11 more)
test/etoh_torch_forces/etoh_in_water_with_tani/: ethanol_rec.crd  ethanol_rec.psf  (+1 more)
test/hsp90/: cb7.inp  input  minimized.crd
test/newDHFR/: 5dfr.crd  5dfr.psf  m.inp
test/solventcavity_prep/: Notes.txt  minimized.psf
test/water216/: input  minimized.crd  minimized.psf
test/water_folate_nadph/: input  par_water_ions.prm
(+281 files in other folders)
